pull down details.

--- a/Backend/DataExtraction/trueskill.conf
+++ b/Backend/DataExtraction/trueskill.conf
@@ -1,4 +1,1 @@
-{
-  "baseurl": "https://ashesescalation-api-tachyon.stardock.net/v1/products/2641/matches",
-  "nextrecordindex": 0
-}
+{"baseUrl": "https://ashesescalation-api-tachyon.stardock.net/v1/products/2641/matches", "nextRecordIndex": 285, "localDbName": "AtoS_TrueSkill"}
